--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+    <div class="button">
+        <button class="btn">MAKE NEW SKETCH</button>
+    </div> 
+    
+
     <div class="container">
         
     </div>
