--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 <body>
 
+    <div class=title>
+        <p class=text>ETCH-A-SKETCH</p>
+    </div>
+
     <div class="button">
         <button class="btn">MAKE NEW SKETCH</button>
     </div> 
-    
 
-    <div class="container">
-        
-    </div>
+    <div class="container"></div>
     <script src="interaction.js"></script>
 </body>
 </html>
