--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
 
-    <div class=title>
-        <p class=text>ETCH-A-SKETCH</p>
+   <div class="flex-container">
+        <div class=title>
+            <p class=text>ETCH-A-SKETCH</p>
+        </div>
+
+        <div class="container"></div>
+
+        <div class="button">
+            <button class="btn">MAKE NEW SKETCH</button>
+        </div> 
+
     </div>
 
-    <div class="button">
-        <button class="btn">MAKE NEW SKETCH</button>
-    </div> 
-
-    <div class="container"></div>
     <script src="interaction.js"></script>
 </body>
 </html>
