--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
    <div class="flex-container">
         <div class=title>
-            <p class=text>ETCH-A-SKETCH</p>
+            <p class=text><strong>ETCH-A-SKETCH</strong></p>
         </div>
 
         <div class="container"></div>
