--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div class="container"></div>
 
         <div class="button">
-            <button class="btn">MAKE NEW SKETCH</button>
+            <button class="btn btn-1">NEW SKETCH</button>
+            <button class="btn btn-2">RGB VERSION</button>
         </div> 
 
     </div>
